force-app/main/default/objects/leaseworks__Journal_Export_Template_Details__c/leaseworks__Journal_Export_Template_Details__c.object-meta.xml
<CustomObject>
    <label>Journal Export Template Details</label>
    <nameField>
        <displayFormat>JETD-{0}</displayFormat>
        <label>Journal Export Template Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Journal Export Template Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>