force-app/main/default/objects/leaseworks__Journal_Export_Template_Details__c/fields/leaseworks__Field_Label__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Field_Label__c</fullName>
    <label>Field Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>