force-app/main/default/objects/leaseworks__Journal_Export_Template_Details__c/fields/leaseworks__Field_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Field_Type__c</fullName>
    <description>Type of the Journal Entry Field. Will be Text for Custom and Null for Dimensions records</description>
    <label>Field Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>