force-app/main/default/objects/leaseworks__Journal_Export_Template_Details__c/fields/leaseworks__Include_in_Journal_Export__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Include_in_Journal_Export__c</fullName>
    <description>Allows users to decide if these fields should be included in the export file.</description>
    <inlineHelpText>Do you require these fields to be included in the Accounting export file?</inlineHelpText>
    <label>Include in Journal Export</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>